[package]
name = "rss-autogen-giscus"
version = "0.1.0"
authors = ["Cameron Rodriguez <dev@camrod.me>"]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
description = "A small program to autogenerate GitHub Discussions from RSS feeds."

[dependencies]
feed-rs = "1.3.0"
octocrab = "0.20.0"
reqwest = "0.11.16"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
