[package]
name = "rss_autogen_giscus"
version = "0.1.0"
authors = ["Cameron Rodriguez <dev@camrod.me>"]
edition = "2021"
description = "A small program to autogenerate GitHub Discussions from Atom/RSS feeds."
license = "Apache-2.0"

[dependencies]
cynic = { version = "3", features = ["http-reqwest"] }
chrono = { version = "0.4", features = ["clock"] }
feed-rs = "~1.3"
gh_gql_schema = { version = "0.1", path = "gh_gql_schema" }
graphql_client = { version = "~0.13", features = ["reqwest"] }
reqwest = { version = "~0.11", features = ["json"] }
serde = "~1.0"
serde_json = "~1.0"
scraper = "~0.16"
tokio = { version = "~1.28", features = ["macros", "rt-multi-thread"] }
url = "2"